:lipstick: fix settings menu spacing

--- a/frontend/src/output.css
+++ b/frontend/src/output.css
@@ -730,6 +730,14 @@ video {
   right: 1.25rem;
 }
 
+.top-7 {
+  top: 1.75rem;
+}
+
+.top-6 {
+  top: 1.5rem;
+}
+
 .z-0 {
   z-index: 0;
 }
@@ -2477,6 +2485,14 @@ body {
 @media (min-width: 640px) {
   .sm\:top-10 {
     top: 2.5rem;
+  }
+
+  .sm\:top-12 {
+    top: 3rem;
+  }
+
+  .sm\:top-11 {
+    top: 2.75rem;
   }
 
   .sm\:block {
